package oop.assignment3.ex41;

import java.util.*;

public class Sort {

    public Sort(){
        //grab list from input
        Input s = new Input();
        //alphabetize list from ascending order
        Collections.sort(s.fInputs);
    }
}
